# barback

./: .gitignore  README.md  README_docs.md  __init__.py  bar_back.py  bar_inventory.csv  barback.py  gather_snapshot.py  models.py  name_searcher.py  new-thing.py  patch_bar_back.py  pyproject.toml  requirements.txt  setup_venv.py  stash.json  stashkit-init.py
backends/: __init__.py  google_vision.py  openai_vision.py  product_resolver.py
barback/: backbar.py  models.py
metadex/: CHANGELOG.md  README.md  pyproject.toml
metadex/boosterpack/: metadata.json
metadex/boosterpack/metadex/: metadex.json
metadex/boosterpack/resolvers/: architecture_resolver.py
metadex/boosterpack/skills/: orientation_skill.py
metadex/compiler/: compiler.py
metadex/docs/: METADEX_API_SCHEMA.md  METADEX_COMPILER_PIPELINE.md  ONBOARDING_FOR_GPT.md  ONBOARDING_FOR_GPT.md.backup  README.md  STASHKIT_CONCEPTUAL_OVERVIEW.md
metadex/docs/diagrams/: architecture.mmd
metadex/metadex/: metadex.json  metadex.pretty-printed.json
metadex/source_yaml/: CHANGELOG.md  README.md
metadex/source_yaml/core/: barback.core.yml  stashkit.boosterpacks.yml  stashkit.core.yml  stashkit.resolvers.yml  stashkit.skills.yml  stashkit.stashdex.yml
metadex/source_yaml/relationships/: core_relationships.yml  relationships.yml
metadex/source_yaml/rules/: basic_rules.yml  rules.yml
metadex/source_yaml/subsystems/: stashkit.resolvers.yml  stashkit.skills.yml  stashkit.stash.yml
metadex/source_yaml/terminology/: stashkit.boosterpacks.yml  stashkit.stashdex.yml
metadex/tests/: test_compiler_smoke.py
(+316 files in other folders)
