[build-system]
requires = ["setuptools", "wheel", "pydantic>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "barback"
version = "0.0.1"
description = "Barback + StashKit (development package)"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
